@@ -7,7 +7,7 @@ Version 0.4.6 Released ? 2010
 * Updated Mambo plugin with changes from Andrew Horton and Aung Khant
 * Updated phpBB plugin
 * Changed $ANEMONE_SKIP_REGEX=Regexp.union line to be compatible with Ruby 1.8.6. Thanks to Michal Ambroz
-* Added plugin reporting support for  :model=>, :firmware=>, :modules=>
+* Added plugin reporting support for  :model=>, :firmware=>, :module=>
 * Modified Joomla plugin to use :modules instead of :string, changed certainty of a regexp
 * Modified PHP-Nuke plugin to use :modules
 * Modified XML logging to record modules separately
@@ -60,6 +60,7 @@ Version 0.4.6 Released ? 2010
 * Updated Mailto plugin, renamed to Email
 * Bug fix: Now redirects for HTTP statuses 300 through 399. Previously redirected for 301,302 and 307.
 * Bug fix: :account didn't have regular expression support
+* Changed :modules to :module, deprecated :accounts to :account
 
 Version 0.4.5 Released August 17th 2010
 * Added 5 plugins from Tonmoy Saikia. They are: Commonspot, TextPattern, Mediawiki, DUclassified and Mailman
